# waitlist-api

./: main.py  pyproject.toml  requirements.txt
app/: email.py  models.py  session.py  waitlist.py
app/router/: waitList.py
templates/emails/: alphaX.html  email.html  waitlist.html
